Replace ES native type string constants with enum references